syntax = "proto3";

package datatier;

option java_package = "via.pro3.datatierserver.grpc";
option java_outer_classname = "DataTierProto";

service BidService {
  // Bid operations
  rpc CreateBid (CreateBidRequest) returns (BidResponse);
  rpc GetBid (GetBidRequest) returns (BidResponse);
  rpc GetBids (GetBidsRequest) returns (GetBidsResponse);
  rpc UpdateBid (UpdateBidRequest) returns (BidResponse);
  rpc DeleteBid (DeleteBidRequest) returns (DeleteBidResponse);
  rpc SetBidStatus (SetBidStatusRequest) returns (BidResponse);
}

service UserService{
  // User operations
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc GetUser (GetUserRequest) returns (UserResponse);
  rpc GetUsers (GetUsersRequest) returns (GetUsersResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}

service SaleService {
  // Sale operations
  rpc CreateSale (CreateSaleRequest) returns (SaleResponse);
  rpc GetSale (GetSaleRequest) returns (SaleResponse);
  rpc GetSales (GetSalesRequest) returns (GetSalesResponse);
  rpc UpdateSale (UpdateSaleRequest) returns (SaleResponse);
  rpc DeleteSale (DeleteSaleRequest) returns (DeleteSaleResponse);
}

service RoleService{
  // Role operations
  rpc GetRole (GetRoleRequest) returns (GetRoleResponse);
}

service AuthService{
  // Login operations
  rpc AuthenticateUser (LoginRequest) returns (LoginResponse);
}

service NotificationService {
  // Notification operations
  rpc CreateNotification (CreateNotificationRequest) returns (NotificationResponse);
  rpc GetNotifications (GetNotificationsRequest) returns (GetNotificationsResponse);
  rpc GetNotification (GetNotificationRequest) returns (NotificationResponse);
  rpc MarkNotificationAsRead (MarkNotificationAsReadRequest) returns (NotificationResponse);
}


// Bid messages
message CreateBidRequest {
  int32 buyerId = 1;
  int32 propertyId = 2;
  double amount = 3;
  int64 expiryDateSeconds = 4; // Unix timestamp
  optional string deal =5;
}

message GetBidRequest {
  int32 id = 1;
}

message GetBidsRequest {
  optional int32 propertyId = 1;
  optional int32 buyerId = 2;
  optional string status = 3;
}

message UpdateBidRequest {
  int32 id = 1;
  optional double amount = 2;
  optional int64 expiryDateSeconds = 3;
  optional string status = 4;
  optional string deal =5;
}

message DeleteBidRequest {
  int32 id = 1;
}

message BidResponse {
  int32 id = 1;
  int32 buyerId = 2;
  int32 propertyId = 3;
  double amount = 4;
  int64 expiryDateSeconds = 5;
  string status = 6;
  optional string deal = 7;
  optional string signature = 8;
  bool signatureValid = 9;
}

message GetBidsResponse {
  repeated BidResponse bids = 1;
}

message DeleteBidResponse {
  bool success = 1;
}

message SetBidStatusRequest {
  int32 id = 1;
  string status = 2;
}

// User messages
message CreateUserRequest {
  string username = 1;
  string password = 2;
  int32 roleId = 3;
  optional string email = 4;
}

message GetUserRequest {
  int32 id = 1;
}

message GetUsersRequest {
  optional int32 roleId = 1;
}

message UpdateUserRequest {
  int32 id = 1;
  optional string username = 2;
  optional string password = 3;
  optional int32 roleId = 4;
  optional bool isActive = 5;
  optional string email = 6;
}

message DeleteUserRequest {
  int32 id = 1;
}

message UserResponse {
  int32 id = 1;
  string username = 2;
  int32 roleId = 3;
  bool isActive = 4;
  optional string email = 5;
  string publicKey = 6;
}

message GetUsersResponse {
  repeated UserResponse users = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

// Sale messages
message CreateSaleRequest {
  int64 timeOfSaleSeconds = 1; // Unix timestamp
  int32 propertyId = 2;
  int32 bidId = 3;
  int32 buyerId = 4;
  int32 agentId = 5;
}

message GetSaleRequest {
  int32 id = 1;
}

message GetSalesRequest {
  optional int32 propertyId = 1;
  optional int32 buyerId = 2;
  optional int32 agentId = 3;
}

message UpdateSaleRequest {
  int32 id = 1;
  optional int64 timeOfSaleSeconds = 2;
  optional int32 propertyId = 3;
  optional int32 bidId = 4;
  optional int32 buyerId = 5;
  optional int32 agentId = 6;
}

message DeleteSaleRequest {
  int32 id = 1;
}

message SaleResponse {
  int32 id = 1;
  int64 timeOfSaleSeconds = 2; // Unix timestamp
  int32 propertyId = 3;
  int32 bidId = 4;
  int32 buyerId = 5;
  int32 agentId = 6;
}

message GetSalesResponse {
  repeated SaleResponse sales = 1;
}

message DeleteSaleResponse {
  bool success = 1;
}

// Role messages
message GetRoleRequest{

  int32 roleId = 1;
}

message GetRoleResponse{

  string roleName = 1;
}

// Login messages
message LoginRequest{

  string username = 1;
  string password = 2;
}

message LoginResponse {
  int32 id = 1;
  string username = 2;
  int32 roleId = 3;
  optional string email = 4;
  string publicKey = 5;
}

// Notification messages
message CreateNotificationRequest {
  int32 bidId = 1;
  optional int32 userId = 2;
  int32 propertyId = 3;
  optional string status = 4;
  string message = 5;
  optional string propertyTitle = 6;
}

message GetNotificationsRequest {
  optional int32 userId = 1;
  optional bool isRead = 4;
}

message GetNotificationRequest {
  int32 id = 1;
}

message MarkNotificationAsReadRequest {
  int32 id = 1;
}

message NotificationResponse {
  int32 id = 1;
  int32 bidId = 2;
  optional int32 userId = 3;
  int32 propertyId = 4;
  optional string status = 5;
  string message = 6;
  optional string propertyTitle = 7;
  int64 createdAtSeconds = 8; // Unix timestamp
  bool isRead = 9;
}

message GetNotificationsResponse {
  repeated NotificationResponse notifications = 1;
}
